<resources>
    <string name="app_name">pos prueba</string>
    <string name="iniciarSesion">iniciarsesion\n</string>
    <string name="olvidastetucontraseña">olvidaste tu contraseña</string>
    <string name="username">username\n</string>
    <string name="password">password\n</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="john_doe_example_com">john.doe@example.com</string>
    <string name="john_doe">John Doe</string>
    <string name="todo">TODO</string>
    <string name="john_doe_gmail_com">john_doe_gmail_com\n</string>
    <string name="notificaciones_de_seguridad">Notificaciones de Seguridad</string>
    <string name="autenticaci_n_en_dos_pasos">Autenticación en Dos Pasos</string>
    <string name="configuraci_n_de_seguridad">Configuración de Seguridad</string>
    <string name="historial_de_actividad">Historial de Actividad</string>
    <string name="notificaciones_por_email">notificaciones_por_email\n</string>
    <string name="notificaciones_push">notificaciones_push\n</string>
    <string name="configuracion_de_notificaciones">configuracion_de_notificaciones</string>
    <string name="estado_de_ventanas">Estado de Ventanas</string>
    <string name="ventana_1_abierta">Ventana 1 - Abierta</string>
    <string name="ventana_2_abierta">Ventana 2 - Abierta</string>
    <string name="ventana_3_cerrada">Ventana 3 - cerrada</string>
    <string name="estado_de_ventana">Estado de Ventanas</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="revisar_estado">Revisar Estado</string>
    <string name="estado_de_ventanas1">Estado de Ventanas</string>
    <string name="historial_de_actividades">Historial de Actividades</string>
    <string name="notificaciones_sms">notificaciones_sms\n</string>
    <string name="estado_de_las_ventanas">Estado de Ventanas</string>
    <string name="estados_de_las_ventanas">Estado de Ventanas</string>
    <string name="recordatorios_de_ventanas">Recordatorios de Ventanas</string>
    <string name="a_adir_recordatorio">Añadir Recordatorio</string>
    <string name="agregar">Agregar</string>
    <string name="preferencias_de_ventilacion">Preferencias de Ventilación</string>
    <string name="agregar1">Agregar</string>
    <string name="notificaciones_de_ventanas">Notificaciones de Ventanas</string>
    <string name="recibir_notificaciones_si_hay_ventanas_abiertas">Recibir Notificaciones si hay Ventanas Abiertas</string>
    <string name="historial_de_ventanas">Historial de Ventanas</string>
    <string name="_1_abre_ventanas_opuestas_para_una_mejor_circulaci_n_de_aire_n2_usa_ventiladores_para_mejorar_el_flujo_de_aire_n3_mant_n_las_puertas_internas_abiertas_para_permitir_que_el_aire_fluya">1. Abre ventanas opuestas para una mejor circulación de aire.\n2. Usa ventiladores para mejorar el flujo de aire.\n3. Mantén las puertas internas abiertas para permitir que el aire fluya.</string>
    <string name="consejos_de_ventilaci_n">Consejos de Ventilación</string>
    <string name="ejemplo_30">Ejemplo: 30</string>
    <string name="guardar_configuraci_n">Guardar Configuración</string>
    <string name="tiempo_de_apertura_minutos">Tiempo de apertura (minutos):</string>
    <string name="configuraci_n_de_ventanas">Configuración de Ventanas</string>
    <string name="activar_notificaciones">activar_notificaciones</string>
    <string name="guardar_cambios">guardar_cambios</string>
    <string name="preferencias_de_usuario">preferencias_de_usuario</string>
    <string name="ventana_4_abierta">ventana_4_abierta</string>
    <string name="ventana_1_cerrada">ventana_1_cerrada</string>
    <string name="ventana_cerrada">ventana_cerrada</string>
    <string name="ventana_abierta">ventana_abierta</string>
    <string name="guardar_configuracion">guardar_configuracion</string>
    <string name="seleccionar_ventana">seleccionar_ventana</string>
    <string name="configuracion_de_ventanas">configuracion_de_ventanas</string>
    <string name="ventanasabiertasoserradas">ventanas_abiertas_o_cerradas</string>
    <string name="seleccione_una_opcion">Seleccione una opción</string>
    <string name="estado_cerrada">Estado: Cerrada</string>
    <string name="volver">Volver</string>
    <string name="detalle_de_la_ventana">Detalle de la Ventana</string>
    <string name="alertar_cuando_est_cerrada">Alertar cuando esté cerrada</string>
    <string name="guardar_configuracion_">Guardar Configuración</string>
    <string name="alertar_cuando_est_abierta">Alertar cuando esté abierta</string>
    <string name="configurar_alertas">Configurar Alertas</string>
    <string name="monitor_de_ventanas">Monitor de Ventanas</string>
</resources>