<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:background="@color/neutro">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccione_una_opcion"
            android:textSize="35sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp" />

        <!-- Opción 1 -->
        <LinearLayout
            android:id="@+id/layout_option_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/holo_blue_light"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preferencias_de_usuario"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <!-- Opción 2 -->
        <RelativeLayout
            android:id="@+id/layout_option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/holo_green_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/configuraci_n_de_ventanas"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </RelativeLayout>

        <!-- Opción 3 -->

        <!-- Opción 4 -->
        <LinearLayout
            android:id="@+id/layout_option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:color/holo_orange_light"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/recordatorios_de_ventanas"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/layout_option_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@android:color/holo_red_light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ventanasabiertasoserradas"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>