<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/darker_gray"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_de_las_ventanas"
            android:textSize="32sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="16dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:rowCount="2"
            android:columnCount="2"
            android:layout_margin="16dp">

            <!-- Ventana 1 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_ventana1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/icon_ventana1"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/lock"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_ventana1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ventana_cerrada"
                        android:textSize="35sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="45dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_ventana2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/icon_ventana2"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/unlocked"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_ventana2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ventana_abierta"
                        android:textSize="35sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="45dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_ventana3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/icon_ventana3"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/lock"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_ventana3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ventana_cerrada"
                        android:textSize="35sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="45dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Ventana 4 -->
            <androidx.cardview.widget.CardView
                android:id="@+id/card_ventana4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:backgroundTint="@android:color/holo_red_light"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/icon_ventana4"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/unlocked"
                        android:layout_gravity="center"/>

                    <TextView
                        android:id="@+id/tv_ventana4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ventana_abierta"
                        android:textSize="35sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="sans-serif-medium"
                        android:layout_marginTop="45dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </GridLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
